// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label snapshot applies custom className 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-destructive"
>
  Required
</label>
`;

exports[`Label snapshot renders default label 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
>
  Email
</label>
`;

exports[`Label snapshot renders with htmlFor attribute 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
  for="email"
>
  Email address
</label>
`;
